--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,5 @@ inventory=inventory.ini
 ansible_user=centos
 ansible_password=DevOps321
 # ask_vault_pass=True
+rq_user=roboshop 
+rq_password=roboshop123
