--- a/variables.yaml
+++ b/variables.yaml
@@ -8,3 +8,5 @@ CART_HOST: cart.nanda.cfd
 SHIPPING_HOST: shipping.nanda.cfd
 PAYMENT_HOST: payment.nanda.cfd
 DISPATCH_HOST: dispatch.nanda.cfd
+rq_user: roboshop
+rq_password: roboshop123
